--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,13 @@ authority = cpan:JANDREW
 [AutoPrereqs]
 skip = ^Moose::Util
 
+[Prereqs / TestRequires]
+-phase = test
+-relationship = requires
+
+IO::File = 1.25
+IO::Handle = 1.25
+
 [MetaProvides::Class]
 
 [MetaProvides::Package]
