--- a/dist.ini
+++ b/dist.ini
@@ -10,12 +10,26 @@ authority = cpan:JANDREW
 [AutoPrereqs]
 skip = ^Moose::Util
 
+[Prereqs / ConfigureRequires]
+-phase = configure
+-relationship = requires
+
+IO::File = 1.16
+IO::Handle = 1.35
+
+[Prereqs / BuildRequires]
+-phase = build
+-relationship = requires
+
+IO::File = 1.16
+IO::Handle = 1.35
+
 [Prereqs / TestRequires]
 -phase = test
 -relationship = requires
 
-IO::File = 1.25
-IO::Handle = 1.25
+IO::File = 1.16
+IO::Handle = 1.35
 
 [MetaProvides::Class]
 
