--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,7 @@ skip = ^Moose::Util
 
 IO::File = 1.16
 IO::Handle = 1.35
+MooseX::ShortCut::BuildInstance = 1.040
 
 [Prereqs / BuildRequires]
 -phase = build
