--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,7 @@ skip = ^Moose::Util
 IO::File = 1.16
 IO::Handle = 1.35
 MooseX::ShortCut::BuildInstance = 1.040
+Spreadsheet::Reader::Format = 1.002
 
 [Prereqs / BuildRequires]
 -phase = build
