--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ IO::File = 1.14
 IO::Handle = 1.25
 MooseX::ShortCut::BuildInstance = 1.040
 Spreadsheet::Reader::Format = 1.002
+Archive::Zip = 1.30
 
 [Prereqs / BuildRequires]
 -phase = build
