--- a/dist.ini
+++ b/dist.ini
@@ -8,7 +8,7 @@ copyright_year   = 2016
 authority = cpan:JANDREW
   
 [AutoPrereqs]
-skip = ^Moose::Util
+#~ skip = ^Moose::Util
 
 [Prereqs / ConfigureRequires]
 -phase = configure
@@ -19,6 +19,7 @@ IO::Handle = 1.25
 MooseX::ShortCut::BuildInstance = 1.040
 Spreadsheet::Reader::Format = 1.002
 Archive::Zip = 1.30
+Modern::Perl = 1.20150127
 
 [Prereqs / BuildRequires]
 -phase = build
