--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,7 @@ authority = cpan:JANDREW
 -phase = configure
 -relationship = requires
 
+IO::Seekable = 1.10
 IO::File = 1.14
 IO::Handle = 1.25
 MooseX::ShortCut::BuildInstance = 1.040
@@ -25,6 +26,7 @@ Modern::Perl = 1.20150127
 -phase = build
 -relationship = requires
 
+IO::Seekable = 1.10
 IO::File = 1.14
 IO::Handle = 1.25
 
@@ -32,6 +34,7 @@ IO::Handle = 1.25
 -phase = test
 -relationship = requires
 
+IO::Seekable = 1.10
 IO::File = 1.14
 IO::Handle = 1.25
 
