--- a/dist.ini
+++ b/dist.ini
@@ -6,14 +6,9 @@ copyright_year   = 2016
 
 [Authority]
 authority = cpan:JANDREW
-  
-[AutoPrereqs]
-#~ skip = ^Moose::Util
 
-[Prereqs / ConfigureRequires]
--phase = configure
--relationship = requires
-
+[Prereqs]
+perl = 5.012
 IO::Seekable = 1.10
 IO::File = 1.14
 IO::Handle = 1.25
@@ -21,22 +16,9 @@ MooseX::ShortCut::BuildInstance = 1.040
 Spreadsheet::Reader::Format = 1.002
 Archive::Zip = 1.30
 Modern::Perl = 1.20150127
-
-[Prereqs / BuildRequires]
--phase = build
--relationship = requires
-
-IO::Seekable = 1.10
-IO::File = 1.14
-IO::Handle = 1.25
-
-[Prereqs / TestRequires]
--phase = test
--relationship = requires
-
-IO::Seekable = 1.10
-IO::File = 1.14
-IO::Handle = 1.25
+  
+[AutoPrereqs]
+#~ skip = ^Moose::
 
 [MetaProvides::Class]
 
