--- a/dist.ini
+++ b/dist.ini
@@ -9,11 +9,10 @@ authority = cpan:JANDREW
 
 [Prereqs]
 perl = 5.010
-IO::Seekable = 1.10
-IO::File = 1.16
 IO::Handle = 1.25
+FileHandle = 0
 MooseX::ShortCut::BuildInstance = 1.040
-Spreadsheet::Reader::Format = 1.002
+Spreadsheet::Reader::Format = 0.002
 Archive::Zip = 1.30
 Modern::Perl = 1.20150127
   
