--- a/dist.ini
+++ b/dist.ini
@@ -12,12 +12,12 @@ perl = 5.010
 IO::Handle = 1.25
 FileHandle = 0
 MooseX::ShortCut::BuildInstance = 1.040
-Spreadsheet::Reader::Format = 0.002
+Spreadsheet::Reader::Format = 0.006
 Archive::Zip = 1.30
 Modern::Perl = 1.20150127
-  
+Test::Moose = 2.1801
+
 [AutoPrereqs]
-#~ skip = ^Moose::
 
 [MetaProvides::Class]
 
